--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -4,7 +4,7 @@ import Layout from "@layouts/Layout.astro";
 import Main from "@layouts/Main.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
-import Card from "@components/Card";
+import Card from "@components/Card.astro";
 import LinkButton from "@components/LinkButton.astro";
 import type { CollectionEntry } from "astro:content";
 
@@ -23,7 +23,9 @@ const next = pageNum < totalPages ? "" : "disabled";
 <Layout title={`Posts | ${SITE.title}`}>
   <Header activeNav="posts" />
   <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
-    <ul>
+    <ul
+      class="md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 grid grid-flow-row gap-8 text-neutral-600 sm:grid-cols-2"
+    >
       {
         posts.map(({ slug, data }) => (
           <Card href={`/posts/${slug}`} frontmatter={data} />
