--- a/src/layouts/TagPosts.astro
+++ b/src/layouts/TagPosts.astro
@@ -1,11 +1,10 @@
-
 ---
 import { type CollectionEntry } from "astro:content";
 import Layout from "@layouts/Layout.astro";
 import Main from "@layouts/Main.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
-import Card from "@components/Card";
+import Card from "@components/Card.astro";
 import Pagination from "@components/Pagination.astro";
 import { SITE } from "@config";
 
@@ -28,7 +27,9 @@ const { currentPage, totalPages, paginatedPosts, tag, tagName } = Astro.props;
     pageDesc={`All the articles with the tag "${tagName}".`}
   >
     <h1 slot="title" transition:name={tag}>{`Tag:${tag}`}</h1>
-    <ul>
+    <ul
+      class="md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 grid grid-flow-row gap-8 text-neutral-600 sm:grid-cols-2"
+    >
       {
         paginatedPosts.map(({ data, slug }) => (
           <Card href={`/posts/${slug}/`} frontmatter={data} />
