--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -30,10 +30,8 @@ const {
 const { Content } = await post.render();
 
 const ogImageUrl = typeof ogImage === "string" ? ogImage : ogImage?.src;
-const ogUrl = new URL(
-  ogImageUrl ?? `/posts/${post.slug}.png`,
-  Astro.url.origin
-).href;
+const ogUrl = new URL(ogImageUrl ?? `/posts/${post.slug}.png`, Astro.url.origin)
+  .href;
 
 const layoutProps = {
   title: `${title} | ${SITE.title}`,
@@ -107,7 +105,7 @@ const layoutProps = {
     @apply mx-auto w-full max-w-3xl px-4 pb-12;
   }
   .post-title {
-    @apply text-2xl font-semibold text-skin-accent;
+    @apply text-2xl font-semibold;
   }
 </style>
 
