Rename posts into models (except in the url)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -62,7 +62,7 @@ const { activeNav } = Astro.props;
         <ul id="menu-items" class="display-none sm:flex">
           <li>
             <a href="/posts/" class={activeNav === "posts" ? "active" : ""}>
-              Posts
+              Models
             </a>
           </li>
           <li>
