--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -20,9 +20,9 @@ const prev = pageNum > 1 ? "" : "disabled";
 const next = pageNum < totalPages ? "" : "disabled";
 ---
 
-<Layout title={`Posts | ${SITE.title}`}>
+<Layout title={`Models | ${SITE.title}`}>
   <Header activeNav="posts" />
-  <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
+  <Main pageTitle="Models" pageDesc="All the models you can download.">
     <ul
       class="md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 grid grid-flow-row gap-8 text-neutral-600 sm:grid-cols-2"
     >
