Remove dark mode

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -27,9 +27,7 @@ const headerProps = {
 };
 ---
 
-<li
-  class="rounded-lg border border-gray-200 shadow dark:border-gray-700 dark:bg-gray-800"
->
+<li class="rounded-lg border border-gray-200 shadow">
   <a href={href}>
     {
       image && (
