--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,12 @@ import Footer from "@components/Footer.astro";
 import LinkButton from "@components/LinkButton.astro";
 import Card from "@components/Card.astro";
 import getSortedPosts from "@utils/getSortedPosts";
+import getFeaturedPosts from "@utils/getFeaturedPosts";
 
 const posts = await getCollection("blog");
 
-const sortedPosts = getSortedPosts(posts);
+const latestPost = getSortedPosts(posts)[0];
+const featuredPosts = getFeaturedPosts(posts);
 ---
 
 <Layout>
@@ -20,15 +22,24 @@ const sortedPosts = getSortedPosts(posts);
         class="md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 grid grid-flow-row gap-8 text-neutral-600 sm:grid-cols-2"
       >
         {
-          sortedPosts.map(
+          featuredPosts.map(
             ({ slug, data }, index) =>
-              index < 4 && (
+              index < 3 && (
                 <Card
                   href={`/posts/${slug}`}
                   frontmatter={data}
                   secHeading={false}
                 />
               )
+          )
+        }
+        {
+          (
+            <Card
+              href={`/posts/${latestPost.slug}`}
+              frontmatter={latestPost.data}
+              secHeading={false}
+            />
           )
         }
       </ul>
